--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -60,15 +60,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this first analysis is to familiarize ourselves with the dataset inorder the know if we need to adapt our research question or enrich the dataset with external information in order to preform our analysis.\n",
+    "The goal of this first analysis is to familiarize ourselves with the dataset in order to know if we need to adapt our research questions or enrich the dataset with external information in order to peeform our analysis.\n",
     "\n",
-    "We were provided two separate datasets containing swiss tweets. They were formated differently and contained different fields and while one was over the duration of multiple years the other only covers a span of 10 months.\n",
-    "We performed an analysis of both in order to be able to decide which one should be used in out project.\n",
-    "After the analysis both sets we decided to use **dataset 2** for our project.\n",
+    "We were provided with two separate datasets containing swiss tweets. They were formated differently and contained different fields. While one was set over the duration of multiple years, the other only covers a span of 10 months.\n",
     "\n",
-    "While dataset 1 containes more precise location information in the form of longitude and latitude, dataset 2 contains a sentiment analysis field as well as a language field.\n",
+    "We performed an analysis on both in order to be able to decide which one should be used in out project. After this analysis, we decided to use **dataset 2** for our project.\n",
     "\n",
-    "As trying to categorize the language of each tweet in dataset 1 was quite computationaly expensive –having to deal with network latency of api requests– and a lot of preprocessing was necessary to get it to work, dataset 2 containing this field puts it at a clear advantage.\n",
+    "While dataset 1 containes more precise location information, in the form of longitude and latitude, dataset 2 contains a sentiment analysis field as well as a language field.\n",
+    "\n",
+    "As trying to categorize the language of each tweet in dataset 1 was quite expensive – having to deal with network latency of API requests – and a lot of preprocessing was necessary to get it to work, dataset 2 containing this field puts it at a clear advantage.\n",
     "\n",
     "We now provide a quick overview of dataset 1."
    ]
@@ -93,23 +93,23 @@
    "source": [
     "The dataset contains the following usefull columns:\n",
     "\n",
-    "- userId : id identifying user\n",
-    "- createdAt : time of posting tweet\n",
-    "- text : content of tweet\n",
-    "- placeLatitude : latitude of tweet\n",
-    "- placeLongitude : longitude of tweet\n",
-    "- sourceName : username\n",
-    "- sourceUrl : url of tweet\n",
-    "- followersCount : number of followers\n",
-    "- friendsCount : number of mutuals\n",
-    "- statusesCount : number of statuses of user"
+    "- **userId** : id identifying the user.\n",
+    "- **createdAt** : time the tweet was posted on.\n",
+    "- **text** : content of tweet.\n",
+    "- **placeLatitude** : latitude of tweet.\n",
+    "- **placeLongitude** : longitude of tweet.\n",
+    "- **sourceName** : username.\n",
+    "- **sourceUrl** : URL of tweet.\n",
+    "- **followersCount** : number of followers.\n",
+    "- **friendsCount** : number of mutual follows.\n",
+    "- **statusesCount** : number of statuses of user."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the sample dataset contains a lot of nan values, and each column contains at least 1% or more nan values."
+    "The sample dataset contains a lot of NaN values, and each column contains at least 1% or more NaN values."
    ]
   },
   {
@@ -125,12 +125,12 @@
    "source": [
     "### Dataset 2 (from Spinn3r)\n",
     "\n",
-    "This dataset has a elaborate description of each field available at the [spinn3r website](http://docs.spinn3r.com/?Example#content-schema).\n",
-    "Unlike the previous dataset, this dataset is given in json format.\n",
+    "This dataset has an elaborate description of each field available at the [spinn3r website](http://docs.spinn3r.com/?Example#content-schema).\n",
+    "Unlike the previous dataset, this dataset is given in JSON format.\n",
     "\n",
     "To deal with the amount of data present in the cluster we look at one day to perform our first analysis and then show how to scale up.\n",
     "\n",
-    "The format of this dataset is a nested json that we could not find how to extract dirrectly using the read json funtion provided. We thus use a json normalizer contained in the pandas libary to extract it. We will later see that spark deals better with nested json."
+    "The format of this dataset is a nested json that we could not find how to extract directly using the read JSON funtion provided. We thus use a JSON normalizer contained in the Pandas libary to extract it. We will later see that spark deals better with nested JSON."
    ]
   },
   {
@@ -164,16 +164,16 @@
    "metadata": {},
    "source": [
     "Out of these columns, the one we can use are:\n",
-    "- main: contains the content of the tweet\n",
-    "- published: gives the time on which the content was posted\n",
-    "- source_spam_probability: probability of tweet being spam\n",
-    "- source_location: location of tweet\n",
-    "- tags: tags associated with tweet, as provided by spinn3r\n",
-    "- lang: language of tweet\n",
-    "- sentiment: sentiment score of tweet -POSITIVE, NEGATIVE, NEUTRAL-\n",
-    "- author_gender: gender of author -MALE, FEMALE, UNKNOWN-\n",
-    "- source_followers: followers of user who tweeted\n",
-    "- source_following: number of mutual followers"
+    "- **main**: contains the content of the tweet.\n",
+    "- **published**: gives the time on which the content was posted.\n",
+    "- **source_spam_probability**: probability of tweet being spam.\n",
+    "- **source_location**: location of tweet.\n",
+    "- **tags**: tags associated with tweet, as provided by spinn3r.\n",
+    "- **lang**: language of tweet.\n",
+    "- **sentiment**: sentiment score of tweet -POSITIVE, NEGATIVE, NEUTRAL-.\n",
+    "- **author_gender**: gender of author -MALE, FEMALE, UNKNOWN-.\n",
+    "- **source_followers**: followers of user who tweeted.\n",
+    "- **source_following**: number of people the user follows."
    ]
   },
   {
@@ -193,9 +193,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now look at general distributions in this dataset. While this example isn't representative when it comes to the tweets –especially given it contains tweets of the 1th of january– it can still give us insights on the other fields.\n",
+    "We now look at general distributions in this dataset. While this example isn't representative when it comes to the tweets – especially given it contains tweets of the 1th of january – it can still give us insights on the other fields.\n",
     "\n",
-    "We assume that roughtly the same categories of users were active on that day, so we can draw conclusions on the distribution of language, gender."
+    "We assume that roughly the same categories of users were active on that day, so we can draw conclusions on the distribution of language and gender."
    ]
   },
   {
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that english, french and german are most frequent. This is good as those are the languages we plan on using."
+    "We see that English, French and German are most frequent. This is good as those are the languages we plan on using."
    ]
   },
   {
@@ -270,7 +270,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the vast majority of tweets was labeled as neutral, and only a very small number are labeled ad negative. We will this look at both neutral and negatively labeled tweets.\n",
+    "We see that the vast majority of tweets was labeled as neutral, and only a very small number are labeled as negative. We will look at both neutral and negatively labeled tweets.\n",
+    "\n",
     "Under the assumption that the positives are not false positives, a tweet showing signs of mental distress will not be labeled as POSITIVE, hence we can safely exclude these tweets from further analysis."
    ]
   },
@@ -278,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the spam probabality we see that not a single tweet was labeled as spam. This puts into question the accuracy of the labeling, as the set of tweets on that day most certainly contains spam. We will still use it, as we assume the chanse of false positives is is low, so we lose nothing by using it."
+    "Looking at the spam probabality we see that not a single tweet was labeled as spam. This puts into question the accuracy of the labeling, as the set of tweets on that day most certainly contains spam. We will still use it, as we assume the chance of false positives is low, so we lose nothing by using it."
    ]
   },
   {
@@ -319,7 +320,7 @@
     "- there are a lot of locations that are the same but in a different language, such as Switzerland and Schweiz\n",
     "- the names of the locations are not just in the languages we are interessted in (see สวิตเซอร์แลนด์)\n",
     "- a vast majority of the dataset is just labeled as 'switzerland'\n",
-    "- but as opposed to dataset 1, they are all located in switzerland"
+    "- but as opposed to dataset 1, they are all located in Switzerland"
    ]
   },
   {
@@ -337,9 +338,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### looking at the tweets\n",
+    "#### Looking at the Tweets\n",
     "\n",
-    "while this set of tweets is not representative we can still use it to find potential issues we might have with the tweet content:"
+    "While this set of tweets is not representative, we can still use it to find potential issues we might have with the tweet content:"
    ]
   },
   {
@@ -393,7 +394,7 @@
    "source": [
     "pd.set_option('display.max_colwidth', 100)\n",
     "twitter_df[twitter_df['main'].map(lambda x: 'suicide' in x) ]['main'] #news instead of personal reference\n",
-    "#removing nres would be good\n",
+    "#removing news would be good\n",
     "#we also see that we should not remove pic.twit"
    ]
   },
@@ -401,14 +402,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that a lot of these tweets contains news, we should remove the links in order to get a better result."
+    "We see that a lot of these tweets contain news, we should remove the links in order to get a better result."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we look at therapy (in german), again this confirms the issues with links"
+    "Here we look at therapy (in german), again this confirms the issue with links."
    ]
   },
   {
@@ -794,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first important step in NLP is to divide the words of every tweet in a table to be able to easily treat them. It is easily done using the _'split'_ method provided in python. "
+    "The first important step in NLP is to divide the words of every tweet in a table to be able to easily treat them. It is easily done using the _'split'_ method provided in Python. "
    ]
   },
   {
@@ -923,21 +924,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  building the dictionary"
+    "####  Building the Dictionary"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### processing the dictionary"
+    "#### Processing the Dictionary"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.5 processing the data"
+    "### 3.5 Processing the Data"
    ]
   },
   {
@@ -979,7 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. final data analysis"
+    "## 5. Final Data Analysis"
    ]
   },
   {
