--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We quickly import the libraries to be used later:"
+    "We first import the libraries that will be used later."
    ]
   },
   {
@@ -27,12 +27,17 @@
     "import pickle as pkl\n",
     "import pyspark as ps\n",
     "import matplotlib.pyplot as plt\n",
-    "import unicodedata\n",
-    "import json\n",
     "\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem.snowball import SnowballStemmer\n",
-    "from pandas.io.json import json_normalize"
+    "#Part 1\n",
+    "import json\n",
+    "from pandas.io.json import json_normalize\n",
+    "\n",
+    "#Part 2\n",
+    "import unicodedata\n",
+    "\n",
+    "#Part 3\n",
+    "from nltk.corpus import stopwords #Part 3\n",
+    "from nltk.stem.snowball import SnowballStemmer"
    ]
   },
   {
@@ -46,7 +51,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "@oth: Describe getting the dataset from the cluster..."
+    "We did not retrieve both datasets using the same method first because they did not have the same weight, but also because they were not provided on the same platform."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our first dataset (_**twitter-swisscom**_) was retrieved from a .zip file. Thus, we had access to the entire dataset quickly allowing us to have an overview of all the tweets when analyzing it (cf _Part 1_ below)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our second dataset, however, was retrieved from the cluster. We first tried to retrieve the whole dataset but quickly realized it would be impossible to do so (it was very heavy and took a long time to be downloaded). Thus, we only extracted the first JSON file to perform our analysis. To do this, we used the following methods:\n",
+    "\n",
+    "```bash\n",
+    "cluster$ hadoop fs -getmerge /datasets/swiss-tweet/harvest3r_twitter_data_01-01_0.json /buffer/example.json\n",
+    "local$ scp -r gaspar@iccluster060.iccluster.epfl.ch:/buffer/example.json <local-path>\n",
+    "```"
    ]
   },
   {
@@ -487,10 +511,7 @@
    },
    "outputs": [],
    "source": [
-    "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
-    "with open(EXAMPLE_PATH) as data_file:    \n",
-    "    example = json.load(data_file)\n",
-    "cleaned = json_normalize(example)\n",
+    "cleaned = json_normalize(data)\n",
     "cleaned.columns = [column.replace('_source.','') for column in cleaned.columns]"
    ]
   },
@@ -705,48 +726,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once this is done, we will use usual functions for text treatment. Thus we the **NLP library** to be able to remove stopwords (*the*, *and*, ... in English for example) from a given language. We also use the stemmer, which gives us the root of any word (ending would become end, beginning would become begin) thus making it easier to make comparaisons with the dictionnaries we created. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def process_words(language):\n",
-    "    lang = language[:2]\n",
-    "    if language == 'german':\n",
-    "        lang = 'de'\n",
-    "    \n",
-    "    stemmer = SnowballStemmer(language)\n",
-    "    lang_set = stopwords.words(language)\n",
-    "        \n",
-    "    cleaned.loc[cleaned['lang'] == lang, 'main'] = cleaned.loc[cleaned['lang'] == lang, 'main'].str.split().\\\n",
-    "        apply(lambda tweet: [word for word in tweet if word not in lang_set]).\\\n",
-    "        apply(lambda tweet: [stemmer.stem(word) for word in tweet])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "process_words('english')\n",
-    "process_words('french')\n",
-    "process_words('german')\n",
-    "cleaned['main'].head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 3. NLP methods"
    ]
   },
@@ -767,9 +746,6 @@
    },
    "outputs": [],
    "source": [
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem.snowball import SnowballStemmer\n",
-    "\n",
     "def process_words(language):\n",
     "    lang = language[:2]\n",
     "    if language == 'german':\n",
@@ -930,6 +906,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The first step of building our dictionary was doing research on previous dictionaries that were used for similar problems. Starting from this, we built our own dictionary by expanding the examples (as we expanded our subject to take into account multiple mental disorders instead of simply determining tweets of users diagnosed with clinical depression). As we treat tweets in multiple languages, we also translated all the terms and tried adding words that specifically target mood (or eating) disorders in french and german.\n",
+    "\n",
+    "_Note: you can take a look at this dictionary by clicking on the 4th reference (at the end of the file)._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### processing the dictionary"
    ]
   },
@@ -1007,63 +992,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[1] https://github.com/master/spark-stemming preforming stemming with spark"
+    "[1] [Example dataprocessing pipeline](http://nbviewer.jupyter.org/gist/mizvol/eb24770ac3d5d598463f972e2a669f03)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[2] http://nbviewer.jupyter.org/gist/mizvol/eb24770ac3d5d598463f972e2a669f03 example dataprocessing pipeline"
+    "[2] [Dissertation containing a first dict](https://www.rand.org/content/dam/rand/pubs/rgs_dissertations/RGSD300/RGSD391/RAND_RGSD391.pdf)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[3] https://spark.apache.org/docs/2.1.0/ml-features.html ml methods we can use with spark"
+    "[3] [Second thesis containing dict](https://getd.libs.uga.edu/pdfs/kale_sayali_s_201512_ms.pdf)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[4] http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/ best ways to do text classification"
+    "[4] [Our own dictionary](https://docs.google.com/spreadsheets/d/1WwI9crZk36pcTOQ1g_5dumMd11OlkpFRNHsEvpkwLMk/edit?usp=sharing)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[5] https://www.rand.org/content/dam/rand/pubs/rgs_dissertations/RGSD300/RGSD391/RAND_RGSD391.pdf dissertation containing dict 1"
+    "[5] [Stemming with Spark](https://github.com/master/spark-stemming)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[6] https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264 public health paper, LDA usage"
+    "[6] [ML methods in Spark](https://spark.apache.org/docs/2.1.0/ml-features.html)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[7] https://docs.google.com/spreadsheets/d/1WwI9crZk36pcTOQ1g_5dumMd11OlkpFRNHsEvpkwLMk/edit?usp=sharing our dictionary"
+    "[7] [Best ways to do Text Classification](http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[8] https://getd.libs.uga.edu/pdfs/kale_sayali_s_201512_ms.pdf second thesis containing dict"
+    "[8] [Public health paper using LDA](https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1077,7 +1062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
