--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -731,6 +731,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After preforming these cleaning steps, the size of the set is significantly reduced, down ro 2.4MB from 55MB."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. NLP methods"
    ]
   },
@@ -899,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first step of building our dictionary was doing research on previous dictionaries that were used for similar problems. Starting from this, we built our own dictionary by expanding the examples (as we expanded our subject to take into account multiple mental disorders instead of simply determining tweets of users diagnosed with clinical depression). As we treat tweets in multiple languages, we also translated all the terms and tried adding words that specifically target mood (or eating) disorders in french and german.\n",
+    "The first step of building our dictionary was doing research on previous dictionaries that were used for similar problems, such as can be seen in [2], [3]. Starting from this, we built our own dictionary by expanding the examples (as we expanded our subject to take into account multiple mental disorders instead of simply determining tweets of users diagnosed with clinical illnesses). As we treat tweets in multiple languages, we also translated all the terms and tried adding words that specifically target mood (or eating) disorders in french and german.\n",
     "\n",
     "_Note: you can take a look at this dictionary by clicking on the 4th reference (at the end of the file)._"
    ]
@@ -945,7 +952,7 @@
    "source": [
     "### 4.2 construcing features TF-IDF\n",
     "\n",
-    "once we have the labeled set we transfrom it in order to have features to use for the ML algorithm."
+    "Once we have the labeled set we transfrom it in order to have features to use for the ML algorithm."
    ]
   },
   {
@@ -954,7 +961,7 @@
    "source": [
     "### 4.3 train SVM classifier\n",
     "\n",
-    "according to [7] SVM with tends to preform very well, especially with limited training set size, which is why we will use this. We preform a binary classification on the labeled dataset."
+    "According to [7] SVM with tends to preform very well, especially with limited training set size, which is why we will use this. We preform a binary classification on the labeled dataset."
    ]
   },
   {
@@ -963,14 +970,16 @@
    "source": [
     "### 4.4 relabel training set\n",
     "\n",
-    "using the previously attained classifier we relabled the set, discarding tweets that are labeled to be undistressed"
+    "Using the previously attained classifier we relabled the set, discarding tweets that are labeled to be undistressed"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Final Data Analysis"
+    "## 5. Final Data Analysis\n",
+    "\n",
+    "In the final analysis we try to analyze and visualize the results in order to answer our research questions"
    ]
   },
   {
