--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -934,6 +934,8 @@
     "The final part of our dataprocessing involves training a supervised machine learning classifier to get better results.\n",
     "Similar projects routienly use this [2] [3] [8].\n",
     "\n",
+    "All these methods are implemented in scikit-learn and have an equivalent in spark in case our computers can not handle the size of the data and we need to preform this step on the cluster.\n",
+    "\n",
     "In order to do this we need to go through the following steps:"
    ]
   },
@@ -986,7 +988,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LDA to find similarities"
+    "### General analysis\n",
+    "\n",
+    "Comparining our found set to the general cleaned set and the overall set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finding related indicatior of mental health issues using LDA\n",
+    "\n",
+    "As discussed in [8] one of the best way to find relevant related words in tweets. Again, we plan on using the scikit-learn implemented version of this to preform this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gender differences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tweet frequency and type over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing our results to census data\n",
+    "\n",
+    "this will be approximative since we could not fine a dataset containing this information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing the languages"
    ]
   },
   {
